--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catenary Demo</title>
+    <title>Pendulum Demo</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Catenary Demo</h1>
+    <h1>Pendulum Demo</h1>
     <canvas id="myCanvas"></canvas>
     <script src="physics.js"></script>
 </body>
 </html>
-tcs
